--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
+    "@vue/compiler-sfc": "^3.0.11",
     "css-loader": "^5.0.0",
     "electron": "12.0.9",
     "eslint": "^7.6.0",
@@ -80,9 +81,13 @@
     "node-loader": "^1.0.1",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.2",
-    "typescript": "^4.0.2"
+    "typescript": "^4.0.2",
+    "vue-loader": "^16.0.0",
+    "vue-style-loader": "^4.1.3",
+    "vue-template-compiler": "^2.6.12"
   },
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.0",
+    "vue": "^3.0.11"
   }
 }
