--- a/package.json
+++ b/package.json
@@ -53,7 +53,10 @@
                 {
                   "html": "./src/index.html",
                   "js": "./src/renderer.ts",
-                  "name": "main_window"
+                  "name": "main_window",
+                  "preload": {
+                    "js": "./src/preload.ts"
+                  }
                 }
               ]
             }
@@ -87,7 +90,11 @@
     "vue-template-compiler": "^2.6.12"
   },
   "dependencies": {
+    "@vueuse/core": "^4.11.0",
     "electron-squirrel-startup": "^1.0.0",
+    "file-type": "^16.4.0",
+    "is-svg": "^4.3.1",
+    "read-chunk": "^3.2.0",
     "vue": "^3.0.11"
   }
 }
