--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "electron": "12.0.9",
     "eslint": "^7.6.0",
     "eslint-plugin-import": "^2.20.0",
+    "file-loader": "^6.2.0",
     "fork-ts-checker-webpack-plugin": "^6.0.1",
     "node-loader": "^1.0.1",
     "style-loader": "^2.0.0",
