--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "file-type": "^16.4.0",
     "is-svg": "^4.3.1",
     "read-chunk": "^3.2.0",
-    "vue": "^3.0.11"
+    "vue": "^3.0.11",
+    "vuex": "^4.0.0"
   }
 }
