--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "license": "MIT",
   "config": {
     "forge": {
-      "packagerConfig": {},
+      "packagerConfig": {
+        "icon": "./src/assets/images/logo_256x256"
+      },
       "makers": [
         {
           "name": "@electron-forge/maker-squirrel",
