--- a/package.json
+++ b/package.json
@@ -93,10 +93,12 @@
     "vue-template-compiler": "^2.6.12"
   },
   "dependencies": {
+    "@types/node": "^15.6.1",
     "@vueuse/core": "^4.11.0",
     "electron-squirrel-startup": "^1.0.0",
     "file-type": "^16.4.0",
     "is-svg": "^4.3.1",
+    "pretty-bytes": "^5.6.0",
     "read-chunk": "^3.2.0",
     "vue": "^3.0.11",
     "vuex": "^4.0.0"
