--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "electron-squirrel-startup": "^1.0.0",
     "file-type": "^16.4.0",
     "is-svg": "^4.3.1",
+    "micell": "^0.13.0",
     "pretty-bytes": "^5.6.0",
     "read-chunk": "^3.2.0",
     "vue": "^3.0.11",
