chore: add publish configuration

--- a/package.json
+++ b/package.json
@@ -44,6 +44,18 @@
           "config": {}
         }
       ],
+      "publishers": [
+        {
+          "name": "@electron-forge/publisher-github",
+          "config": {
+            "repository": {
+              "owner": "Alex1990",
+              "name": "ant-preview"
+            },
+            "prerelease": true
+          }
+        }
+      ],
       "plugins": [
         [
           "@electron-forge/plugin-webpack",
@@ -74,6 +86,7 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.55",
     "@electron-forge/maker-zip": "^6.0.0-beta.55",
     "@electron-forge/plugin-webpack": "6.0.0-beta.54",
+    "@electron-forge/publisher-github": "^6.0.0-beta.57",
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
