--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -28,6 +28,6 @@ jobs:
         run: yarn install
 
       - name: Make and publish distribution
-        run: yarn publish
+        run: yarn run publish
 
 
