--- a/.github/workflows/package.yml
+++ b/.github/workflows/package.yml
@@ -10,6 +10,8 @@ jobs:
   build:
     name: Build
     runs-on: ${{ matrix.os }}
+    env:
+      GITHUB_TOKEN: ${{ github.token }}
 
     strategy:
       matrix:
