--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "@types/node": "^15.6.1",
     "@vueuse/core": "^4.11.0",
     "electron-squirrel-startup": "^1.0.0",
+    "exifr": "^7.1.0",
     "file-type": "^16.4.0",
     "is-svg": "^4.3.1",
     "micell": "^0.13.0",
