--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@electron-forge/plugin-webpack": "6.0.0-beta.54",
     "@electron-forge/publisher-github": "^6.0.0-beta.57",
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
+    "@types/lodash": "^4.14.170",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "@vue/compiler-sfc": "^3.0.11",
@@ -101,7 +102,7 @@
     "node-loader": "^1.0.1",
     "style-loader": "^2.0.0",
     "ts-loader": "^8.0.2",
-    "typescript": "^4.0.2",
+    "typescript": "^4.3.5",
     "vue-loader": "^16.0.0",
     "vue-style-loader": "^4.1.3",
     "vue-template-compiler": "^2.6.12"
@@ -114,6 +115,7 @@
     "exifr": "^7.1.0",
     "file-type": "^16.4.0",
     "is-svg": "^4.3.1",
+    "lodash": "^4.17.21",
     "micell": "^0.13.0",
     "pretty-bytes": "^5.6.0",
     "read-chunk": "^3.2.0",
