--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "forge": {
       "packagerConfig": {
         "name": "ant-preview",
-        "icon": "./src/assets/images/logo_256x256"
+        "icon": "./src/assets/images/logo_256x256",
+        "asar": true
       },
       "makers": [
         {
@@ -90,6 +91,7 @@
     "@electron-forge/publisher-github": "^6.0.0-beta.57",
     "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
     "@types/lodash": "^4.14.170",
+    "@types/node": "^15.6.1",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^4.0.1",
     "@vue/compiler-sfc": "^3.0.11",
@@ -108,7 +110,6 @@
     "vue-template-compiler": "^2.6.12"
   },
   "dependencies": {
-    "@types/node": "^15.6.1",
     "@vueuse/core": "^4.11.0",
     "@vueuse/gesture": "^1.0.0",
     "electron-squirrel-startup": "^1.0.0",
